# midap

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: matrix_includes.json  pytest_with_conda.yml  pytest_with_venv.yml
euler/: requirements.txt
midap/: __init__.py  config.py  main.py  main_family_machine.py  main_mother_machine.py
midap/apps/: cut_chamber.py  init_GUI.py
midap/imcut/: base_cutout.py  interactive_cutout.py  semiautomated_cutout.py
midap/segmentation/: __init__.py  base_segmentator.py  cellpose_sam_segmentator.py  omni_segmentator.py  omni_segmentator_jupyter.py  stardist_segmentator.py  unet_segmentator.py
tests/segmentation/: test_base_segmentator.py  test_cellpose_sam_segmentator.py  test_omni_segmentator.py  test_stardist_segmentator.py  test_unet_segmentator.py
